--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Project-Deezer</title>
 </head>
 <body>
-    <p>Project Deezer est un site-web présentant l'entreprise française Deezer.</p>
+    <p>Project-Deezer est un site-web présentant l'entreprise française "Deezer".</p>
 </body>
 </html>
