--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="x-icon" href="favicon.ico?">
-    <title>Project-Deezer</title>
+    <title>DeezerReal</title>
 </head>
 <body>
-    <p>Project-Deezer est un site-web présentant l'entreprise française "Deezer".</p>
+    <p>DeezerReal est un site-web présentant l'entreprise française "Deezer".</p>
 </body>
 </html>
