--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DeezerReal</title>
 </head>
 <body>
+    <h1>DeezerReal</h1>
     <p>DeezerReal est un site-web présentant l'entreprise française "Deezer". Les quelques pages que comporte le site vont vous permettre de découvrir l’entreprise plus en détail, en abordant les différents points de celle-ci ; son histoire, ses services, son modèle économique, et aussi son environnement ainsi que ses engagements.</p>
 </body>
 </html>
