--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="favicon.ico?">
     <title>DeezerReal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="pagebase2.css">
 </head>
 <body>
-    <h1>DeezerReal</h1>
-    <p>DeezerReal est un site-web présentant l'entreprise française "Deezer". Les quelques pages que comporte le site vont vous permettre de découvrir l’entreprise plus en détail, en abordant les différents points de celle-ci ; son histoire, ses services, son modèle économique, et aussi son environnement ainsi que ses engagements.</p>
+  <video id="background-video" autoplay loop muted>
+
+    <source src="img/VidéoaccueilDR.mp4" type="video/mp4">
+    
+    </video>
+    <div class="mainhead">
+        <header class="menu">
+            <div class="boxhead boxhead1"><a href="" data-hover="───────────">Accueil</a></div>
+            <div class="boxhead boxhead2"><a href="" data-hover="───────────────────">Services Proposés</a></div>
+            <div class="boxhead boxhead3"><a href="" data-hover="───────────">Histoire</a></div>
+            <div class="boxhead boxhead4"><a href="" data-hover="─────────────">Environnement</a></div>
+            <div class="boxhead boxhead5"><a href="" data-hover="───────────">Economie</a></div>
+
+
+            <div class="dropdown">
+            </div>
+
+        </header>
+    </div>
+    <div class="corps">
+      <div class="logo1">
+        <img class="imglogo1" src="img/Nouveau projet.png" alt="logodeezer">
+      </div>
+      <h1><strong>DeezerReal</strong></h1>
+      <h3><strong><em>"We bring the music"</em></strong></h3>
+      <h4>DeezerReal vous présente l'entreprise Deezer, l'icône français du streaming musical, quand, où et comme vous le voulez !</h4>
+        <div class="opacity"></div>
+        
+    </div>
+    <div class="butto"><button class="button-visite" role="button">Commencez votre visite !</button></div>
+    <div class="footer">
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js'></script><script  src="pagebase.js"></script>
 </body>
 </html>
