bouton accueil update

--- a/pageaccueil.html
+++ b/pageaccueil.html
@@ -35,7 +35,7 @@
         <div class="opacity"></div>
         
     </div>
-    <div class="butto"><button class="button-visite" role="button">Commencez votre visite !</button></div>
+    <div class="butto"><a href="hitsdumoment.html"><button class="button-visite" role="button">Commencez votre visite !</button></div>
     <div class="footer">
 
     </div>
