w3c histoire accueil hit
bouton use les sur accueil hit

--- a/histoiredeezer.html
+++ b/histoiredeezer.html
@@ -237,7 +237,7 @@
         </div>
 
         <div class="box boxo b15o" data-anim="15">
-            <img src="img/Jeronimo Folgueira, Deezer.jpeg" alt="les licorne française" class="imo15 imo">
+            <img src="img/JeronimoFolgueiraDeezer.jpeg" alt="les licorne française" class="imo15 imo">
       </div>
    
     </div>
