--- a/hitsdumoment.html
+++ b/hitsdumoment.html
@@ -57,27 +57,27 @@
         </div>
       <div class="top1">
         <p class="toptitre">&#127942; Top 1 &#127942;<p>
-        <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1905751117" width="400" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+        <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1905751117" width="400" height="300"  allow="encrypted-media; clipboard-write"></iframe>
           <h2>&#127942; Sam Smith - Unholy  ft. Kim Petras &#127942;</h2>
         </div>
         <div class="globe">
         <div class="top2">
           <p class="toptitre">&#129352; Top 2 &#129352;<p>
-            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1703487577" width="300" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1703487577" width="300" height="250"  allow="encrypted-media; clipboard-write"></iframe>
             <h2>&#129352; Harry Styles - As It Was &#129352;</h2>
           </div>
 
           <div class="top3">
             <p class="toptitre">&#129353; Top 3 &#129353;<p>
-              <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1874467717" width="300" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+              <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1874467717" width="300" height="250"  allow="encrypted-media; clipboard-write"></iframe>
               <h2>&#129353; David Guetta & Bebe Rexha - I'm Good (Blue)&#129353;</h2>
             </div>
           </div>
           <h5>... Et plus encore !</h5>
           <div class="deezertop">
-            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1111142221" width="500" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
-            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1109890291" width="500" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
-            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1111143121" width="500" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1111142221" width="500" height="500"  allow="encrypted-media; clipboard-write"></iframe>
+            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1109890291" width="500" height="500"  allow="encrypted-media; clipboard-write"></iframe>
+            <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1111143121" width="500" height="500"  allow="encrypted-media; clipboard-write"></iframe>
           </div> 
             <br>
           <button class="button-28" role="button">Voir les offres de Deezer</button>
