--- a/pageaccueil.html
+++ b/pageaccueil.html
@@ -27,7 +27,7 @@
     </div>
     <div class="corps">
       <div class="logo1">
-        <img class="imglogo1" src="img/Nouveau projet.png" alt="logodeezer">
+        <img class="imglogo1" src="img/Nouveau_projet.png" alt="logodeezer">
       </div>
       <h1><strong>DeezerReal</strong></h1>
       <h3><strong><em>"We bring the music"</em></strong></h3>
