--- a/histoiredeezer.html
+++ b/histoiredeezer.html
@@ -25,7 +25,7 @@
 
             <div class="menut">
               <div class="boxhead boxhead0"><a href="pageaccueil.html" data-hover="───────────">Accueil</a></div>
-              <div class="boxhead boxhead1"><a href="pagebase2.html" data-hover="───────────────">Hits du Moment</a></div>
+              <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
               <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
               <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
               <div class="boxhead boxhead4"><a href="pagebase.html" data-hover="─────────────">Environnement</a></div>
