push page Environnement

--- a/pagebase.html
+++ b/pagebase.html
@@ -29,7 +29,7 @@
               <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
               <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
               <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
-              <div class="boxhead boxhead4"><a href="pagebase.html" data-hover="─────────────">Environnement</a></div>
+              <div class="boxhead boxhead4"><a href="Environnement.html" data-hover="─────────────">Environnement</a></div>
               <div class="boxhead boxhead5"><a href="page_eco.html" data-hover="───────────">Economie</a></div>
             </div>
 
@@ -44,7 +44,7 @@
                 <li><a class="dropdown-item" href="pageaccueil.html">Accueil</a></li>
                 <li><a class="dropdown-item" href="pagebase.html">Services Proposés</a></li>
                 <li><a class="dropdown-item" href="histoiredeezer.html">Histoire</a></li>
-                <li><a class="dropdown-item" href="pagebase.html">Environnement</a></li>
+                <li><a class="dropdown-item" href="Environnement.html">Environnement</a></li>
                 <li><a class="dropdown-item" href="pagebase.html">Economie</a></li>
              </ul>
             </div>
