--- a/pageaccueil.html
+++ b/pageaccueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>DeezerReal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/css/pageacceuil.css">
+    <link rel="stylesheet" href="style/css/pageaccueil.css">
 </head>
 <body>
   <video id="background-video" autoplay loop muted>
@@ -18,7 +18,7 @@
             <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
             <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
             <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
-            <div class="boxhead boxhead4"><a href="pagebase.html" data-hover="─────────────">Environnement</a></div>
+            <div class="boxhead boxhead4"><a href="Environnement.html" data-hover="─────────────">Environnement</a></div>
             <div class="boxhead boxhead5"><a href="page_eco.html" data-hover="───────────">Economie</a></div>
 
             <div class="dropdown">
