--- a/Environnement.html
+++ b/Environnement.html
@@ -59,7 +59,7 @@
           <div class="text">
             Question 1 : Quel est le parcours qui vous a conduit à devenir PDG de Deezer ?
             <br>
-            Réponse : Les études ont été un élément clé de ma carrière, j'ai été <strog>diplômé comme le meilleur étudiant en économie
+            Réponse : Les études ont été un élément clé de ma carrière, j'ai été <strong>diplômé comme le meilleur étudiant en économie
             d'Espagne</strong>, puis j'ai fait un MBA à Columbia et un programme exécutif à Harvard. J'ai également créé ma propre entreprise
             à la fin de la vingtaine. Et j'ai eu des <strong>rôles très intenses</strong>, comme celui de banquier d'affaires M&A à Londres. J'ai également
             su saisir les opportunités qui se présentaient.
