ligne 8 ajouté + footer entier à part- de ligne 86

--- a/hitsdumoment.html
+++ b/hitsdumoment.html
@@ -5,6 +5,7 @@
     <title>Hits du Moment</title>
     <link href="style/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/css/hitsdumoment.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -82,9 +83,38 @@
             <br>
           <a href="servicedeezer.html"><button class="button-28" role="button">Voir les offres de Deezer</button>
     </div>
-    <div class="footer">
-
-    </div>
+        <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                </div>
+                <div align="center" class="socialbtns">
+                    <ul>
+                    <a href="https://fr-fr.facebook.com/deezerfr/" class="fa fa-lg fa-facebook"> | </a>
+                    <a href="https://twitter.com/deezer" class="fa fa-lg fa-twitter"> | </a>
+                    <a href="https://fr.linkedin.com/company/deezer" class="fa fa-lg fa-linkedin"> | </a>
+                    <a href="https://www.instagram.com/deezerfr/" class="fa fa-lg fa-instagram"> | </a>
+                    <a href="https://www.youtube.com/channel/UCCNfaRhDzSezq7BJ9J40laQ" class="fa fa-lg fa-youtube"> | </a>
+                    </ul>
+                    </div>             
+            </div>
+            <a href="https://support.deezer.com/hc/fr/requests/new"><button class="button-29" role="button">Contactez Deezer</button></a>
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul>
+                            <li><a href="pageaccueil.html">|| Accueil</a>
+                                <a href="hitsdumoment.html">|| Hits du Moment</a>
+                                <a href="servicedeezer.html">|| Services Proposés</a>
+                                <a href="histoiredeezer.html">|| Histoire</a>
+                                <a href="#">|| Environnement</a>
+                                <a href="page_eco.html">|| Économie</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h4>Cette page a été réalisée par Dalia Nezzar à l'occasion de la SAÉ 1.05-06.</h4>
+                <p class="copyright">Tous les droits appartiennent à Deezer © 2007</p>
+            </div>
+        </footer>
     <script src="style/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="style/js/jquery-3.6.1.min.js"></script>
     <script src="style/js/pagebase.js"></script>
