--- a/page_eco.html
+++ b/page_eco.html
@@ -6,6 +6,7 @@
     <link href="style/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/css/pagebase.css">
     <link rel="stylesheet" href="style/css/pageeco.css">
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
 
