--- a/pageaccueil.html
+++ b/pageaccueil.html
@@ -5,6 +5,7 @@
     <title>DeezerReal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style/css/pageaccueil.css">
+       <link rel="icon" href="favicon.ico" />
 </head>
 <body>
   <video id="background-video" autoplay loop muted>
