--- a/page_eco.html
+++ b/page_eco.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>page de base</title>
+    <title>Economie</title>
     <link href="style/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/css/pagebase.css">
     <link rel="stylesheet" href="style/css/pageeco.css">
