--- a/hitsdumoment.html
+++ b/hitsdumoment.html
@@ -6,6 +6,7 @@
     <link href="style/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/css/hitsdumoment.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
 
