changement du nom d'accueil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </video>
     <div class="mainhead">
         <header class="menu">
-            <div class="boxhead boxhead0"><a href="pageaccueil.html" data-hover="───────────">Accueil</a></div>
+            <div class="boxhead boxhead0"><a href="index.html" data-hover="───────────">Accueil</a></div>
             <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
             <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
             <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
