--- a/histoiredeezer.html
+++ b/histoiredeezer.html
@@ -6,6 +6,7 @@
     <link href="style/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/css/pagebase.css">
     <link rel="stylesheet" href="style/css/csshistoiredeezer.css">
+   
 </head>
 <body>  
   <video id="background-video" autoplay loop muted>
@@ -27,7 +28,7 @@
               <div class="boxhead boxhead0"><a href="pageaccueil.html" data-hover="───────────">Accueil</a></div>
               <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
               <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
-              <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
+              <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="">Histoire</a></div>
               <div class="boxhead boxhead4"><a href="Environnement.html" data-hover="─────────────">Environnement</a></div>
               <div class="boxhead boxhead5"><a href="page_eco.html" data-hover="───────────">Economie</a></div>
             </div>
@@ -244,6 +245,41 @@
 
 
     <div class="footer">
+        <footer class="text-center text-white" style="background-color: #f1f1f1;">
+  <div class="containerfoot">
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="link" href="https://fr-fr.facebook.com/Deezer/">
+        <img class="wwoo" src="img/footer/facebook.png" alt="">
+    </a>
+
+      <!-- Twitter -->
+      <a class="link" href="https://twitter.com/deezer">
+        <img class="wwoo" src="img/footer/twitter.png" alt="">
+    </a>
+
+      <!-- Google -->
+      <a class="link" href="https://www.deezer.com/us">
+        <img class="wwoo" src="img/footer/deezerlink.png" alt="">
+    </a>
+      
+      <!-- Instagram -->
+      <a class="link" href="https://www.instagram.com/deezer">
+        <img class="wwoo" src="img/footer/insta.png" alt="">
+    </a>
+
+      <!-- Linkedin -->
+      <a class="link" href="https://fr.linkedin.com/company/deezer">
+        <img class="wwoo" src="img/footer/linkedin.png" alt="">
+    </a>
+    </section>
+        
+       <a class="btconta" href="https://support.deezer.com/hc/fr/requests/new">Nous contacter</a>
+  </div>
+  <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    Cette page a été réalisée par Dalia Nezzar à l'occasion de la SAÉ 1.05-06.
+  </div>
+</footer>
     </div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js'></script>
