--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="opacity"></div>
         
     </div>
-    <div class="butto"><a href="hitsdumoment.html"><button class="button-visite" role="button">Commencez votre visite !</button></div>
+    <form action="hitsdumoment.html" method="get" id="form1"></form>
+    <div class="butto"><button form="form1" class="button-visite">Commencez votre visite !</button></div>
     <div class="footer">
 
     </div>
