footer + indication de page

--- a/histoiredeezer.html
+++ b/histoiredeezer.html
@@ -278,7 +278,7 @@
        <a class="btconta" href="https://support.deezer.com/hc/fr/requests/new">Nous contacter</a>
   </div>
   <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    Cette page a été réalisée par Dalia Nezzar à l'occasion de la SAÉ 1.05-06.
+    Cette page a été réalisée par Calixte REYMOND à l'occasion de la SAÉ 1.05-06.
   </div>
 </footer>
     </div>
