--- a/hitsdumoment.html
+++ b/hitsdumoment.html
@@ -27,7 +27,7 @@
 
             <div class="menut">
               <div class="boxhead boxhead0"><a href="index.html" data-hover="───────────">Accueil</a></div>
-              <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="───────────────">Hits du Moment</a></div>
+              <div class="boxhead boxhead1"><a href="hitsdumoment.html" data-hover="">Hits du Moment</a></div>
               <div class="boxhead boxhead2"><a href="servicedeezer.html" data-hover="───────────────────">Services Proposés</a></div>
               <div class="boxhead boxhead3"><a href="histoiredeezer.html" data-hover="───────────">Histoire</a></div>
               <div class="boxhead boxhead4"><a href="Environnement.html" data-hover="─────────────">Environnement</a></div>
@@ -84,38 +84,45 @@
             <br>
           <a href="servicedeezer.html"><button class="button-28" role="button">Voir les offres de Deezer</button>
     </div>
-        <div class="footer-dark">
-        <footer>
-            <div class="container">
-                <div class="row">
-                </div>
-                <div align="center" class="socialbtns">
-                    <ul>
-                    <a href="https://fr-fr.facebook.com/deezerfr/" class="fa fa-lg fa-facebook"> | </a>
-                    <a href="https://twitter.com/deezer" class="fa fa-lg fa-twitter"> | </a>
-                    <a href="https://fr.linkedin.com/company/deezer" class="fa fa-lg fa-linkedin"> | </a>
-                    <a href="https://www.instagram.com/deezerfr/" class="fa fa-lg fa-instagram"> | </a>
-                    <a href="https://www.youtube.com/channel/UCCNfaRhDzSezq7BJ9J40laQ" class="fa fa-lg fa-youtube"> | </a>
-                    </ul>
-                    </div>             
-            </div>
-            <a href="https://support.deezer.com/hc/fr/requests/new"><button class="button-29" role="button">Contactez Deezer</button></a>
-                    <div class="col-sm-6 col-md-3 item">
-                        <ul>
-                            <li><a href="pageaccueil.html">|| Accueil</a>
-                                <a href="hitsdumoment.html">|| Hits du Moment</a>
-                                <a href="servicedeezer.html">|| Services Proposés</a>
-                                <a href="histoiredeezer.html">|| Histoire</a>
-                                <a href="#">|| Environnement</a>
-                                <a href="page_eco.html">|| Économie</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 item text">
-                        <h4>Cette page a été réalisée par Dalia Nezzar à l'occasion de la SAÉ 1.05-06.</h4>
-                <p class="copyright">Tous les droits appartiennent à Deezer © 2007</p>
-            </div>
-        </footer>
+
+
+    <div class="footer">
+      <footer class="text-center text-white" style="background-color: #f1f1f1;">
+<div class="containerfoot">
+  <section class="mb-4">
+    <!-- Facebook -->
+    <a class="link" href="https://fr-fr.facebook.com/Deezer/">
+      <img class="wwoo" src="img/footer/facebook.png" alt="">
+  </a>
+
+    <!-- Twitter -->
+    <a class="link" href="https://twitter.com/deezer">
+      <img class="wwoo" src="img/footer/twitter.png" alt="">
+  </a>
+
+    <!-- Google -->
+    <a class="link" href="https://www.deezer.com/us">
+      <img class="wwoo" src="img/footer/deezerlink.png" alt="">
+  </a>
+    
+    <!-- Instagram -->
+    <a class="link" href="https://www.instagram.com/deezer">
+      <img class="wwoo" src="img/footer/insta.png" alt="">
+  </a>
+
+    <!-- Linkedin -->
+    <a class="link" href="https://fr.linkedin.com/company/deezer">
+      <img class="wwoo" src="img/footer/linkedin.png" alt="">
+  </a>
+  </section>
+      
+     <a class="btconta" href="https://support.deezer.com/hc/fr/requests/new">Nous contacter</a>
+</div>
+<div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  Cette page a été réalisée par Dalia Nezzar à l'occasion de la SAÉ 1.05-06.
+</div>
+</footer>
+  </div>
     <script src="style/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="style/js/jquery-3.6.1.min.js"></script>
     <script src="style/js/pagebase.js"></script>
