--- a/hitsdumoment.html
+++ b/hitsdumoment.html
@@ -82,7 +82,8 @@
             <iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/playlist/1111143121" width="500" height="500"  allow="encrypted-media; clipboard-write"></iframe>
           </div> 
             <br>
-          <a href="servicedeezer.html"><button class="button-28" role="button">Voir les offres de Deezer</button>
+            <form action="servicedeezer.html" method="get" id="form1"></form>
+          <button form="form1" class="button-28">Voir les offres de Deezer</button>
     </div>
 
 
