--- a/histoiredeezer.html
+++ b/histoiredeezer.html
@@ -90,9 +90,9 @@
       <div class="box boxt b2 p2" data-anim="2">
           <h2>Blogmusik.net</h2>
           <div class="text">
-            Grace a cette experience Daniel s’associe avec <strong>Jonathan Amouyal</strong> pour créer la société Alyza Media et lancer en <strong>2006 Blogmusik.net</strong>. 
+            Grace à cette experience, Daniel s’associe avec <strong>Jonathan Amouyal</strong> pour créer la société Alyza Media et lancer en <strong>2006 Blogmusik.net</strong>. 
             <br>
-            Ce site a pour but de distribué de la musique <strong>gratuitement</strong> en ligne. Ce site est <strong>fermé en 2007</strong> suite a des pression faite par la SACEM qui dénonce le non droit d'auteur.
+            Ce site a pour but de distribuer de la musique <strong>gratuitement</strong> en ligne. Ce site est <strong>fermé en 2007</strong> suite à des pressions faite par la SACEM qui dénonce le non droit d'auteur.
           </div>
       </div>
 
@@ -122,7 +122,7 @@
           <h2>L'arrivé des contrat</h2>
           <div class="text">
             En 2010 Deezer devient partenaire de Orange. Avec ce partenariat Orange inclut Deezer Premium à ses offres haut de gamme. <br>
-            Deezer a aussi des plus petit contrat avec d'autre enseigne comme un contrat de diffusion avec McDonald's en 2009
+            Deezer a aussi des plus petits contrats avec d'autred enseigned comme un contrat de diffusion avec McDonald's en 2009
           </div>
       </div>
 
@@ -134,7 +134,7 @@
         <div class="box boxt b6 p6" data-anim="6">
             <h2>l'expension de Deezer</h2>
             <div class="text">
-                Deezer est de plus en plus connu a travers le monde. Il est, en 2012 présent dans toute l'europe, l'Australie, en Amerique du sud, 6 pays de l'Asie, etc. <br>
+                Deezer est de plus en plus connu à travers le monde. Il est, en 2012 présent dans toute l'europe, l'Australie, en Amerique du sud, 6 pays de l'Asie, etc. <br>
                 Le site compte aussi 21 partenariats avec des opérateurs téléphoniques.
             </div>
         </div>
@@ -153,8 +153,8 @@
         <div class="box boxt b8 p8" data-anim="8">
             <h2>Les nouvelle Fonctionalités</h2>
             <div class="text">
-                En 2014 Deezer inclut sa nouvelle Fonctionalité signature : la playsite Flow qui est une playliste personalisé pour chaque utilisateurs. <br>
-                C'est aussi l'anné ou Deezer propose pour la premiere fois une version HIFI.
+                En 2014 Deezer inclut sa nouvelle Fonctionalité signature : la playsite Flow qui est une playliste personalisée pour chaque utilisateurs. <br>
+                C'est aussi l'année ou Deezer propose pour la premiere fois une version HIFI.
             </div>
         </div>
 
@@ -165,15 +165,15 @@
         <div class="box boxt b9 p9" data-anim="9">
             <h2>L'arrivé de contenu plus varié</h2>
             <div class="text">
-                En plus de la musique Deezer inclus des podcasts a son catalogue. <br>
+                En plus de la musique Deezer inclus des podcasts à son catalogue. <br>
                 BMW devient partenaire de Deezer.
             </div>
         </div>
 
         <div class="box boxt b10 p10" data-anim="10">
-            <h2>L'elargissement des offres</h2>
+            <h2>L'élargissement des offres</h2>
             <div class="text">
-                Deezer lance son offre Deezer Famille en plus des autre offres. <br>
+                Deezer lance son offre Deezer Famille en plus des autres offres. <br>
                 Access Industries et Orange deviennent les actionaires principaux.
             </div>
         </div>
@@ -194,7 +194,7 @@
         <div class="box boxt b12 p12" data-anim="12">
             <h2>La licorne</h2>
             <div class="text">
-                Deezer est évaluer a 1 millards de d'euro et rejoint les licornes frnaçaise.
+                Deezer est évalué à 1 millards de d'euro et rejoint les licornes frnaçaises.
             </div>
         </div>
 
@@ -207,7 +207,7 @@
             <div class="text">
                 En 2019 Deezer change de logo pour le remettre au gout du jour. <br>
                 Deezer rejoint NEXT40. <br>
-                Et la Fonctionalité spleeter est ajouter a Deezer.
+                Et la Fonctionalité spleeter est ajouté à Deezer.
             </div>
         </div>
 
@@ -234,7 +234,7 @@
             <h2>Le nouveau ceo</h2>
             <div class="text">
                 Deezer nomme un nouveau CEO : Jeronimo Folgueira
-                Les podcasts ont désormaient un onglet dédier. <br>
+                Les podcasts ont désormaient un onglet dédié. <br>
             </div>
         </div>
 
